gen/PSParser.py
# Generated from PS.g4 by ANTLR 4.7.2
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class PSParser ( Parser ):

    grammarFileName = "PS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"'\\$'", u"'+'", u"'-'", 
                     u"'*'", u"'/'", u"'('", u"')'", u"'{'", u"'}'", u"'\\{'", 
                     u"'\\}'", u"'['", u"']'", u"'\\left'", u"'\\right'", 
                     u"'\\mleft'", u"'\\mright'", u"'|'", u"'\\lim'", u"<INVALID>", 
                     u"'\\int'", u"'\\sum'", u"'\\prod'", u"'\\log'", u"'\\ln'", 
                     u"<INVALID>", u"'\\sin'", u"'\\cos'", u"'\\tan'", u"'\\csc'", 
                     u"'\\sec'", u"'\\cot'", u"'\\arcsin'", u"'\\arccos'", 
                     u"'\\arctan'", u"'\\arccsc'", u"'\\arcsec'", u"'\\arccot'", 
                     u"'\\sinh'", u"'\\cosh'", u"'\\tanh'", u"'\\arsinh'", 
                     u"'\\arcosh'", u"'\\artanh'", u"'\\arcsinh'", u"'\\arccosh'", 
                     u"'\\arctanh'", u"'arsinh'", u"'arcsinh'", u"'arcosh'", 
                     u"'arccosh'", u"'artanh'", u"'arctanh'", u"'\\sqrt'", 
                     u"'\\times'", u"'\\cdot'", u"'\\div'", u"'\\frac'", 
                     u"'\\binom'", u"'\\choose'", u"'\\mod'", u"'\\mathit'", 
                     u"'\\operatorname'", u"'matrix'", u"'pmatrix'", u"'bmatrix'", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"'&'", u"'\\\\'", 
                     u"'\\overline'", u"'\\bar'", u"'_'", u"'^'", u"':'", 
                     u"';'", u"','", u"'.'", u"<INVALID>", u"'e'", u"'E'", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"'='", u"'<'", 
                     u"<INVALID>", u"'>'", u"<INVALID>", u"<INVALID>", u"'!'" ]

    symbolicNames = [ u"<INVALID>", u"WS", u"DOLLAR_SIGN", u"ADD", u"SUB", 
                      u"MUL", u"DIV", u"L_PAREN", u"R_PAREN", u"L_BRACE", 
                      u"R_BRACE", u"L_BRACE_VISUAL", u"R_BRACE_VISUAL", 
                      u"L_BRACKET", u"R_BRACKET", u"L_LEFT", u"R_RIGHT", 
                      u"ML_LEFT", u"MR_RIGHT", u"BAR", u"FUNC_LIM", u"LIM_APPROACH_SYM", 
                      u"FUNC_INT", u"FUNC_SUM", u"FUNC_PROD", u"FUNC_LOG", 
                      u"FUNC_LN", u"FUNC_EXP", u"FUNC_SIN", u"FUNC_COS", 
                      u"FUNC_TAN", u"FUNC_CSC", u"FUNC_SEC", u"FUNC_COT", 
                      u"FUNC_ARCSIN", u"FUNC_ARCCOS", u"FUNC_ARCTAN", u"FUNC_ARCCSC", 
                      u"FUNC_ARCSEC", u"FUNC_ARCCOT", u"FUNC_SINH", u"FUNC_COSH", 
                      u"FUNC_TANH", u"FUNC_ARSINH", u"FUNC_ARCOSH", u"FUNC_ARTANH", 
                      u"FUNC_ARCSINH", u"FUNC_ARCCOSH", u"FUNC_ARCTANH", 
                      u"FUNC_ARSINH_NAME", u"FUNC_ARCSINH_NAME", u"FUNC_ARCOSH_NAME", 
                      u"FUNC_ARCCOSH_NAME", u"FUNC_ARTANH_NAME", u"FUNC_ARCTANH_NAME", 
                      u"FUNC_SQRT", u"CMD_TIMES", u"CMD_CDOT", u"CMD_DIV", 
                      u"CMD_FRAC", u"CMD_BINOM", u"CMD_CHOOSE", u"CMD_MOD", 
                      u"CMD_MATHIT", u"CMD_OPERATORNAME", u"MATRIX_TYPE_MATRIX", 
                      u"MATRIX_TYPE_PMATRIX", u"MATRIX_TYPE_BMATRIX", u"MATRIX_TYPES", 
                      u"CMD_MATRIX_START", u"CMD_MATRIX_END", u"MATRIX_DEL_COL", 
                      u"MATRIX_DEL_ROW", u"ACCENT_OVERLINE", u"ACCENT_BAR", 
                      u"UNDERSCORE", u"CARET", u"COLON", u"SEMICOLON", u"COMMA", 
                      u"PERIOD", u"DIFFERENTIAL", u"EXP_E", u"E_NOTATION_E", 
                      u"LETTER_NO_E", u"NUMBER", u"E_NOTATION", u"EQUAL", 
                      u"LT", u"LTE", u"GT", u"GTE", u"UNEQUAL", u"BANG", 
                      u"PERCENT_NUMBER", u"GREEK_LETTER", u"SYMBOL", u"VARIABLE" ]

    RULE_accent_symbol = 0
    RULE_math = 1
    RULE_matrix = 2
    RULE_matrix_row = 3
    RULE_relation = 4
    RULE_relation_list = 5
    RULE_relation_list_content = 6
    RULE_equality = 7
    RULE_expr = 8
    RULE_additive = 9
    RULE_mp = 10
    RULE_mp_nofunc = 11
    RULE_unary = 12
    RULE_unary_nofunc = 13
    RULE_postfix = 14
    RULE_postfix_nofunc = 15
    RULE_postfix_op = 16
    RULE_eval_at = 17
    RULE_eval_at_sub = 18
    RULE_eval_at_sup = 19
    RULE_exp = 20
    RULE_exp_nofunc = 21
    RULE_comp = 22
    RULE_comp_nofunc = 23
    RULE_group = 24
    RULE_abs_group = 25
    RULE_accent = 26
    RULE_atom = 27
    RULE_mathit = 28
    RULE_mathit_text = 29
    RULE_frac = 30
    RULE_binom = 31
    RULE_func_normal_functions = 32
    RULE_func_operator_names = 33
    RULE_func_normal = 34
    RULE_func = 35
    RULE_args = 36
    RULE_limit_sub = 37
    RULE_func_arg = 38
    RULE_func_arg_noparens = 39
    RULE_subexpr = 40
    RULE_supexpr = 41
    RULE_subeq = 42
    RULE_supeq = 43

    ruleNames =  [ u"accent_symbol", u"math", u"matrix", u"matrix_row", 
                   u"relation", u"relation_list", u"relation_list_content", 
                   u"equality", u"expr", u"additive", u"mp", u"mp_nofunc", 
                   u"unary", u"unary_nofunc", u"postfix", u"postfix_nofunc", 
                   u"postfix_op", u"eval_at", u"eval_at_sub", u"eval_at_sup", 
                   u"exp", u"exp_nofunc", u"comp", u"comp_nofunc", u"group", 
                   u"abs_group", u"accent", u"atom", u"mathit", u"mathit_text", 
                   u"frac", u"binom", u"func_normal_functions", u"func_operator_names", 
                   u"func_normal", u"func", u"args", u"limit_sub", u"func_arg", 
                   u"func_arg_noparens", u"subexpr", u"supexpr", u"subeq", 
                   u"supeq" ]

    EOF = Token.EOF
    WS=1
    DOLLAR_SIGN=2
    ADD=3
    SUB=4
    MUL=5
    DIV=6
    L_PAREN=7
    R_PAREN=8
    L_BRACE=9
    R_BRACE=10
    L_BRACE_VISUAL=11
    R_BRACE_VISUAL=12
    L_BRACKET=13
    R_BRACKET=14
    L_LEFT=15
    R_RIGHT=16
    ML_LEFT=17
    MR_RIGHT=18
    BAR=19
    FUNC_LIM=20
    LIM_APPROACH_SYM=21
    FUNC_INT=22
    FUNC_SUM=23
    FUNC_PROD=24
    FUNC_LOG=25
    FUNC_LN=26
    FUNC_EXP=27
    FUNC_SIN=28
    FUNC_COS=29
    FUNC_TAN=30
    FUNC_CSC=31
    FUNC_SEC=32
    FUNC_COT=33
    FUNC_ARCSIN=34
    FUNC_ARCCOS=35
    FUNC_ARCTAN=36
    FUNC_ARCCSC=37
    FUNC_ARCSEC=38
    FUNC_ARCCOT=39
    FUNC_SINH=40
    FUNC_COSH=41
    FUNC_TANH=42
    FUNC_ARSINH=43
    FUNC_ARCOSH=44
    FUNC_ARTANH=45
    FUNC_ARCSINH=46
    FUNC_ARCCOSH=47
    FUNC_ARCTANH=48
    FUNC_ARSINH_NAME=49
    FUNC_ARCSINH_NAME=50
    FUNC_ARCOSH_NAME=51
    FUNC_ARCCOSH_NAME=52
    FUNC_ARTANH_NAME=53
    FUNC_ARCTANH_NAME=54
    FUNC_SQRT=55
    CMD_TIMES=56
    CMD_CDOT=57
    CMD_DIV=58
    CMD_FRAC=59
    CMD_BINOM=60
    CMD_CHOOSE=61
    CMD_MOD=62
    CMD_MATHIT=63
    CMD_OPERATORNAME=64
    MATRIX_TYPE_MATRIX=65
    MATRIX_TYPE_PMATRIX=66
    MATRIX_TYPE_BMATRIX=67
    MATRIX_TYPES=68
    CMD_MATRIX_START=69
    CMD_MATRIX_END=70
    MATRIX_DEL_COL=71
    MATRIX_DEL_ROW=72
    ACCENT_OVERLINE=73
    ACCENT_BAR=74
    UNDERSCORE=75
    CARET=76
    COLON=77
    SEMICOLON=78
    COMMA=79
    PERIOD=80
    DIFFERENTIAL=81
    EXP_E=82
    E_NOTATION_E=83
    LETTER_NO_E=84
    NUMBER=85
    E_NOTATION=86
    EQUAL=87
    LT=88
    LTE=89
    GT=90
    GTE=91
    UNEQUAL=92
    BANG=93
    PERCENT_NUMBER=94
    GREEK_LETTER=95
    SYMBOL=96
    VARIABLE=97

    def __init__(self, input, output=sys.stdout):
        super(PSParser, self).__init__(input, output=output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Accent_symbolContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PSParser.Accent_symbolContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ACCENT_BAR(self):
            return self.getToken(PSParser.ACCENT_BAR, 0)

        def ACCENT_OVERLINE(self):
            return self.getToken(PSParser.ACCENT_OVERLINE, 0)

        def getRuleIndex(self):
            return PSParser.RULE_accent_symbol

        def enterRule(self, listener):
            if hasattr(listener, "enterAccent_symbol"):
                listener.enterAccent_symbol(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAccent_symbol"):
                listener.exitAccent_symbol(self)




    def accent_symbol(self):

        localctx = PSParser.Accent_symbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_accent_symbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not(_la==PSParser.ACCENT_OVERLINE or _la==PSParser.ACCENT_BAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MathContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PSParser.MathContext, self).__init__(parent, invokingState)
            self.parser = parser

        def relation(self):
            return self.getTypedRuleContext(PSParser.RelationContext,0)


        def relation_list(self):
            return self.getTypedRuleContext(PSParser.Relation_listContext,0)


        def getRuleIndex(self):
            return PSParser.RULE_math

        def enterRule(self, listener):
            if hasattr(listener, "enterMath"):
                listener.enterMath(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMath"):
                listener.exitMath(self)




    def math(self):

        localctx = PSParser.MathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_math)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.relation(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.relation_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PSParser.MatrixContext, self).__init__(parent, invokingState)
            self.parser = parser

        def CMD_MATRIX_START(self):
            return self.getToken(PSParser.CMD_MATRIX_START, 0)

        def matrix_row(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PSParser.Matrix_rowContext)
            else:
                return self.getTypedRuleContext(PSParser.Matrix_rowContext,i)


        def CMD_MATRIX_END(self):
            return self.getToken(PSParser.CMD_MATRIX_END, 0)

        def MATRIX_DEL_ROW(self, i=None):
            if i is None:
                return self.getTokens(PSParser.MATRIX_DEL_ROW)
            else:
                return self.getToken(PSParser.MATRIX_DEL_ROW, i)

        def getRuleIndex(self):
            return PSParser.RULE_matrix

        def enterRule(self, listener):
            if hasattr(listener, "enterMatrix"):
                listener.enterMatrix(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMatrix"):
                listener.exitMatrix(self)




    def matrix(self):

        localctx = PSParser.MatrixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_matrix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(PSParser.CMD_MATRIX_START)
            self.state = 95
            self.matrix_row()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PSParser.MATRIX_DEL_ROW:
                self.state = 96
                self.match(PSParser.MATRIX_DEL_ROW)
                self.state = 97
                self.matrix_row()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(PSParser.CMD_MATRIX_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Matrix_rowContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PSParser.Matrix_rowContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PSParser.ExprContext)
            else:
                return self.getTypedRuleContext(PSParser.ExprContext,i)


        def MATRIX_DEL_COL(self, i=None):
            if i is None:
                return self.getTokens(PSParser.MATRIX_DEL_COL)
            else:
                return self.getToken(PSParser.MATRIX_DEL_COL, i)

        def getRuleIndex(self):
            return PSParser.RULE_matrix_row

        def enterRule(self, listener):
            if hasattr(listener, "enterMatrix_row"):
                listener.enterMatrix_row(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMatrix_row"):
                listener.exitMatrix_row(self)




    def matrix_row(self):

        localctx = PSParser.Matrix_rowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_matrix_row)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.expr()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PSParser.MATRIX_DEL_COL:
                self.state = 106
                self.match(PSParser.MATRIX_DEL_COL)
                self.state = 107
                self.expr()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PSParser.RelationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PSParser.ExprContext,0)


        def relation(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PSParser.RelationContext)
            else:
                return self.getTypedRuleContext(PSParser.RelationContext,i)


        def EQUAL(self):
            return self.getToken(PSParser.EQUAL, 0)

        def LT(self):
            return self.getToken(PSParser.LT, 0)

        def LTE(self):
            return self.getToken(PSParser.LTE, 0)

        def GT(self):
            return self.getToken(PSParser.GT, 0)

        def GTE(self):
            return self.getToken(PSParser.GTE, 0)

        def UNEQUAL(self):
            return self.getToken(PSParser.UNEQUAL, 0)

        def getRuleIndex(self):
            return PSParser.RULE_relation

        def enterRule(self, listener):
            if hasattr(listener, "enterRelation"):
                listener.enterRelation(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRelation"):
                listener.exitRelation(self)



    def relation(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PSParser.RelationContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_relation, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.expr()
            self._ctx.stop = self._input.LT(-1)
            self.state = 121
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PSParser.RelationContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_relation)
                    self.state = 116
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 117
                    _la = self._input.LA(1)
                    if not(((((_la - 87)) & ~0x3f) == 0 and ((1 << (_la - 87)) & ((1 << (PSParser.EQUAL - 87)) | (1 << (PSParser.LT - 87)) | (1 << (PSParser.LTE - 87)) | (1 << (PSParser.GT - 87)) | (1 << (PSParser.GTE - 87)) | (1 << (PSParser.UNEQUAL - 87)))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 118
                    self.relation(3) 
                self.state = 123
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Relation_listContext(ParserRuleContext):
